--- a/app/views/contactes.html
+++ b/app/views/contactes.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6 col-lg-6">
-        <table class="table">
+        <table class="table table-hover">
             <thead>
             <tr>
                 <th>Options</th>
