crea agendes i contactes i els mostra en temps real, nomes crea contactes en agenda amb nom = prova

--- a/app/views/contactes.html
+++ b/app/views/contactes.html
@@ -11,25 +11,13 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <tr  ng-repeat="contact in contactesData">
                 <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>{{contact.name}}</td>
+                <td>{{contact.surname}}</td>
+                <td>{{contact.company}}</td>
+                <td>{{contact.telephone}}</td>
             </tr>
-            <tr>
-                <td>2</td>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
-
             </tbody>
         </table>
     </div>
