--- a/app/views/agenda.html
+++ b/app/views/agenda.html
@@ -1,37 +1,43 @@
 <div class="row">
-    <div class="col-md-6 col-lg-6">
-      <h3>Agendes disponibles:</h3>
-      <tabset vertical="true" type="pills">
-            <tab ng-repeat="agenda in agendesData" heading="{{agenda.name}}">
-            </tab>
-            <!--<tab heading="Vertical 2"></tab>-->
+  <div class="col-md-6 col-lg-6">
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h3 class="panel-title">Agendes disponibles:</h3>
+      </div>
+      <div class="panel-body">
+        <tabset vertical="true" type="pills">
+          <tab ng-repeat="agenda in agendesData" heading="{{agenda.name}}" ng-click="selectAgenda(agenda)">
+          </tab>
+          <!--<tab heading="Vertical 2"></tab>-->
         </tabset>
-      <!--<div ng-repeat="thing in agendesData"><p>{{thing.name}}</p></div>-->
+      </div>
     </div>
+  </div>
 
-    <div class="col-md-6 col-lg-6">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Create agenda</h3>
-            </div>
-            <div class="panel-body">
-                <form name="createAgenda" novalidate>
-                    <div class="form-group"
-                         ng-class="{'has-error': createAgenda.name.$dirty && createAgenda.name.$invalid}">
-                        <label for="name">Name</label>
-                        <input type="text" ng-model="createAgendaData.name" required class="form-control"
-                               placeholder="Name" name="name" id="name">
-                        <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
-                        <!--<ng-message when="required">This field is required</ng-message>-->
-                        <!--</ng-messages>-->
-                    </div>
-                    <div>
-                        <button class="btn btn-success btn-large pull-right" ng-disabled="createAgenda.$invalid"
-                                ng-click="createAgendaCon()">Create agenda
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
+  <div class="col-md-6 col-lg-6">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Create agenda</h3>
+      </div>
+      <div class="panel-body">
+        <form name="createAgenda" novalidate>
+          <div class="form-group"
+               ng-class="{'has-error': createAgenda.name.$dirty && createAgenda.name.$invalid}">
+            <label for="name">Name</label>
+            <input type="text" ng-model="createAgendaData.name" required class="form-control"
+                   placeholder="Name" name="name" id="name">
+            <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
+            <!--<ng-message when="required">This field is required</ng-message>-->
+            <!--</ng-messages>-->
+          </div>
+          <div>
+            <button class="btn btn-success btn-large pull-left" ng-disabled="createAgenda.$invalid"
+                    ng-click="createAgendaCon()">
+              <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Create agenda
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
