fa deletes de contactes, falta fer deletes de agendes, el codi està ple de logs

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,7 @@
-<p>This is the about view.</p>
+<div class="card">
+  <h1 align="center">This is a project of an agenda done in the <b>Jedi MEAN course</b>, Summer 2015</h1>
+
+  <div align="center">
+    <img src="images/logo-jedi.png" height="202" width="421">
+  </div>
+</div>
