--- a/app/views/agenda.html
+++ b/app/views/agenda.html
@@ -1,3 +1,8 @@
+<div class="container">
+  <div class="row" align="center">
+    <h1 style="color:whitesmoke"><b>Welcome back!</b></h1>
+  </div>
+  <br>
 <div class="row">
   <div class="col-md-6 col-lg-6">
     <div class="panel panel-success">
@@ -40,4 +45,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
