--- a/app/views/contactes.html
+++ b/app/views/contactes.html
@@ -1,68 +1,89 @@
-<div class="row">
+<div class="container">
+  <div class="row" align="center">
+    <h1 style="color:whitesmoke"><b>Agenda actual: {{agenda}}</b></h1>
+  </div>
+  <br>
+
+  <div class="row">
     <div class="col-md-6 col-lg-6">
-        <table class="table table-hover">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title">Contactes disponibles:</h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-hover">
             <thead>
             <tr>
-                <th>Options</th>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Company</th>
-                <th>Phone</th>
+              <th>Options</th>
+              <th>Name</th>
+              <th>Surname</th>
+              <th>Company</th>
+              <th>Phone</th>
             </tr>
             </thead>
             <tbody>
-            <tr  ng-repeat="contact in contactesData">
-                <td>1</td>
-                <td>{{contact.name}}</td>
-                <td>{{contact.surname}}</td>
-                <td>{{contact.company}}</td>
-                <td>{{contact.telephone}}</td>
+            <tr ng-repeat="contact in contactesData track by $index">
+              <td>
+                <button class="btn btn-danger" ng-click="deleteContactCon(contact)">
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+              </td>
+              <td>{{contact.name}}</td>
+              <td>{{contact.surname}}</td>
+              <td>{{contact.company}}</td>
+              <td>{{contact.telephone}}</td>
             </tr>
             </tbody>
-        </table>
+          </table>
+        </div>
+      </div>
     </div>
 
     <div class="col-md-6 col-lg-6">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Create contact</h3>
-            </div>
-            <div class="panel-body">
-                <form name="createContact" novalidate>
-                    <div class="form-group"
-                         ng-class="{'has-error': createContact.name.$dirty && createContact.name.$invalid}">
-                        <label for="name">Name</label>
-                        <input type="text" ng-model="createContactData.name" required class="form-control"
-                               placeholder="Name" name="name" id="name">
-                        <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
-                            <!--<ng-message when="required">This field is required</ng-message>-->
-                        <!--</ng-messages>-->
-                    </div>
-                    <div class="form-group"
-                         ng-class="{'has-error': createContact.surname.$dirty && createContact.surname.$invalid}">
-                        <label for="surname">Surname</label>
-                        <input type="text" ng-model="createContactData.surname" required class="form-control"
-                               placeholder="Surname" name="surname" id="surname">
-                    </div>
-                    <div class="form-group"
-                         ng-class="{'has-error': createContact.company.$dirty && createContact.company.$invalid}">
-                        <label for="company">Company</label>
-                        <input type="text" ng-model="createContactData.company" required class="form-control"
-                               placeholder="Company" name="company" id="company">
-                    </div>
-                    <div class="form-group"
-                         ng-class="{'has-error': createContact.phone.$dirty && createContact.phone.$invalid}">
-                        <label for="phone">Phone Number</label>
-                        <input type="text" ng-model="createContactData.phone" required class="form-control"
-                               placeholder="Phone number" name="phone" id="phone">
-                    </div>
-                    <div>
-                        <button class="btn btn-success btn-large pull-right" ng-disabled="createContact.$invalid" ng-click="createContactCon()">Create contact</button>
-                    </div>
-                </form>
-            </div>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Create contact</h3>
         </div>
+        <div class="panel-body">
+          <form name="createContact" novalidate>
+            <div class="form-group"
+                 ng-class="{'has-error': createContact.name.$dirty && createContact.name.$invalid}">
+              <label for="name">Name</label>
+              <input type="text" ng-model="createContactData.name" required class="form-control"
+                     placeholder="Name" name="name" id="name">
+              <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
+              <!--<ng-message when="required">This field is required</ng-message>-->
+              <!--</ng-messages>-->
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': createContact.surname.$dirty && createContact.surname.$invalid}">
+              <label for="surname">Surname</label>
+              <input type="text" ng-model="createContactData.surname" required class="form-control"
+                     placeholder="Surname" name="surname" id="surname">
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': createContact.company.$dirty && createContact.company.$invalid}">
+              <label for="company">Company</label>
+              <input type="text" ng-model="createContactData.company" required class="form-control"
+                     placeholder="Company" name="company" id="company">
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': createContact.phone.$dirty && createContact.phone.$invalid}">
+              <label for="phone">Phone Number</label>
+              <input type="text" ng-model="createContactData.phone" required class="form-control"
+                     placeholder="Phone number" name="phone" id="phone">
+            </div>
+            <div>
+              <button class="btn btn-success btn-large pull-right" ng-disabled="createContact.$invalid"
+                      ng-click="createContactCon()">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Create contact
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 
 
