--- a/app/views/agenda.html
+++ b/app/views/agenda.html
@@ -3,47 +3,86 @@
     <h1 style="color:whitesmoke"><b>Welcome back!</b></h1>
   </div>
   <br>
-<div class="row">
-  <div class="col-md-6 col-lg-6">
-    <div class="panel panel-success">
-      <div class="panel-heading">
-        <h3 class="panel-title">Agendes disponibles:</h3>
-      </div>
-      <div class="panel-body">
-        <tabset vertical="true" type="pills">
-          <tab ng-repeat="agenda in agendesData" heading="{{agenda.name}}" ng-click="selectAgenda(agenda)">
-          </tab>
-          <!--<tab heading="Vertical 2"></tab>-->
-        </tabset>
-      </div>
-    </div>
-  </div>
 
-  <div class="col-md-6 col-lg-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">Create agenda</h3>
-      </div>
-      <div class="panel-body">
-        <form name="createAgenda" novalidate>
-          <div class="form-group"
-               ng-class="{'has-error': createAgenda.name.$dirty && createAgenda.name.$invalid}">
-            <label for="name">Name</label>
-            <input type="text" ng-model="createAgendaData.name" required class="form-control"
-                   placeholder="Name" name="name" id="name">
-            <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
-            <!--<ng-message when="required">This field is required</ng-message>-->
-            <!--</ng-messages>-->
-          </div>
-          <div>
-            <button class="btn btn-success btn-large pull-left" ng-disabled="createAgenda.$invalid"
-                    ng-click="createAgendaCon()">
-              <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Create agenda
-            </button>
-          </div>
-        </form>
+  <div class="row">
+    <div class="col-md-6 col-lg-6">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title">Agendes disponibles:</h3>
+        </div>
+        <div class="panel-body">
+          <tabset vertical="true" type="pills">
+            <tab ng-repeat="agenda in agendesData" heading="{{agenda.name}}" ng-click="selectAgenda(agenda)">
+            </tab>
+          </tabset>
+        </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="col-md-6 col-lg-6">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Create agenda</h3>
+          </div>
+          <div class="panel-body">
+            <form name="createAgenda" novalidate>
+              <div class="form-group"
+                   ng-class="{'has-error': createAgenda.name.$dirty && createAgenda.name.$invalid}">
+                <label for="name">Name</label>
+                <input type="text" ng-model="createAgendaData.name" required class="form-control"
+                       placeholder="Name" name="name" id="name">
+                <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
+                <!--<ng-message when="required">This field is required</ng-message>-->
+                <!--</ng-messages>-->
+              </div>
+              <div>
+                <button class="btn btn-success btn-large pull-left" ng-disabled="createAgenda.$invalid"
+                        ng-click="createAgendaCon()">
+                  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Create agenda
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <br>
+
+      <div class="col-md-6 col-lg-6">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h3 class="panel-title">Delete agenda</h3>
+          </div>
+          <div class="panel-body">
+            <form name="deleteAgenda" novalidate>
+              <div class="form-group"
+                   ng-class="{'has-error': deleteAgenda.name.$dirty && deleteAgenda.name.$invalid}">
+                <label for="name">Name</label>
+                <input type="text" ng-model="deleteAgendaData.name" required class="form-control"
+                       placeholder="Name" name="name" id="nameDel">
+                <!--<ng-messages for="createContact.name.$error" class="text-danger" ng-if="createContact.name.$dirty">-->
+                <!--<ng-message when="required">This field is required</ng-message>-->
+                <!--</ng-messages>-->
+              </div>
+              <div>
+                <button class="btn btn-danger btn-large pull-left" ng-disabled="deleteAgenda.$invalid"
+                        ng-click="deleteAgendaCon()">
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Delete agenda
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!--<div class="container">-->
+    <!--<button class="btn btn-danger" ng-click="">-->
+    <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Esborrar una agenda-->
+    <!--</button>-->
+    <!--</div>-->
+    <!--</div>-->
   </div>
 </div>
 </div>
